--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ravn-graph-challenge",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/dominickpatricia/Ravn-Challenge-V2-DominickPatriciaAlvarezRojas.git",
   "dependencies": {
     "@apollo/client": "^3.3.20",
     "@testing-library/jest-dom": "^5.11.4",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.0"
   }
 }
